app/assets/stylesheets/consilium.css.scss
@import 'constants';
@import 'utilities';

/**
 * Utilities / mixins.
 */
@mixin calc($property, $expression) {
  #{$property}: -moz-calc(#{$expression});
  #{$property}: -o-calc(#{$expression});
  #{$property}: -webkit-calc(#{$expression});
  #{$property}: calc(#{$expression});
}

body {
  &.popover-active {
    overflow: hidden;
  }

  h1, h2, h3, h4, h5, h6 {
    &.no-bottom-margin {
      margin-bottom: 0;
    }
    &.no-top-margin {
      margin-top: 0;
    }
  }

  h1 {
    font-size: 40px;
    @include respond-to(handhelds) { font-size: 32px; }
    font-weight: 100;
  }

  h2 {
    font-size: 32px;
    @include respond-to(handhelds) { font-size: 22px; }
    font-weight: 200;
  }

  h3 {
    font-size: 22px;
    @include respond-to(handhelds) { font-size: 18px; }
    font-weight: 200;
  }

  .alert {
    background: #cce1ef;
    padding: 20px;
    color: #163246;

    .alert-inner {
      display: table;

      * {
        display: table-cell;
      }

      i {
        padding-right: 20px;
        vertical-align: middle;
      }

      p {
        overflow: auto;
      }
    }
  }

  #layout {
    @include transition();

    padding-left: $nav-width-desktops;
    @include respond-to(handhelds) {
      padding-left: 0;
      &.active {
        padding-left: $nav-width-handhelds;
      }
    }
    @include respond-to(tablets) {
      padding-left: 0;
      &.active {
        padding-left: $nav-width-tablets;
      }
    }
  }

  .center {
    text-align: center;
  }

  .hide {
    display: none;
  }

  .header {
    min-height: 60px;
    padding: 1em 1em 0 1em;

    @include respond-to(handhelds) { padding: 0; }

    .breadcrumbs {
      .divider {
        color: #ccc;
        font-weight: 200;
      }

      a, a:link, a:visited, a:hover, a:active {
        color: #08c;
        text-decoration: none;
      }
    }
  }

  hr.soften {
    margin: 20px 0;
    height: 1px;
    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
    border: 0;
  }

//.popover {
//  $popover-width: $form-input-width + 100px;
//  $popover-padding: 20px;

//  min-width: $popover-width;
//  @include calc(width, "100% - #{$nav-width + 2*$popover-padding}");
//  padding: $popover-padding;
//  top: 0;
//  left: $nav-width;
//  height: 100%;
//  position: fixed;
//  background-color: #fff;

//  .popover-inner {
//    width: $popover-width;
//    margin: auto;

//    label {
//      width: 80px;
//    }
//  }
//}

  #main {
    width: 100%;
  }

  .content {
    $content-margin-handhelds: 85px;
    $content-margin-tablets: 150px;
    width: 70%;
    margin: auto;
    /** Note special case below. */
    @include respond-to(handhelds) { @include calc(width, '100% - #{$content-margin-handhelds}'); margin-right: 20px; }
    @include respond-to(tablets) { @include calc(width, '100% - #{$content-margin-tablets}'); }
    @include respond-to(widescreens) { width: 80%; }
  }

  /** Special case for content. */
  #layout.active .content {
    $content-margin-handhelds-menu-open: 50px;
    @include respond-to(handhelds) {
      margin-right: auto;
      @include calc(width, '100% - #{$content-margin-handhelds-menu-open}');
    }
  }

  .align-right {
    text-align: right;
  }

  .search button {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    margin-left: -7px;
  }

  .centered {
    margin: auto;
  }

  .full-width {
    width: 100%;
  }

  .container {
    margin: auto;
    width: 70%;
  }

  .separator {
    margin: 40px 0;
  }

  .separator-small {
    margin: 30px 0;
  }

  .separator-xsmall {
    margin: 20px 0;
  }

  #mainMenuLink {
    @include transition();

    &:link, &:visited, &:hover, &:active {
      color: #eee;
      text-decoration: none;
    }

    &:hover {
      background: rgba(0, 0, 0, 0.9);
    }

    position: fixed;
    padding: 10px;
    left: 0;
    background: rgba(0, 0, 0, 0.75);

    i {
      width: auto;
    }

    &.active {
      left: $nav-width-handhelds;
      @include respond-to(handhelds) { left: $nav-width-handhelds; }
      @include respond-to(tablets) { left: $nav-width-tablets; }
    }
  }

  .section {
    position: relative;

    > a {
      position: absolute;
      bottom: 0;
      right: 0;
    }
  }
}

